доделал nexStatus, изменил там в константах на более человеческую запись